v. 1.3.0 - lang dropdown frontend

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,6 @@
 header {
   height: 80px;
-  background-color: lightblue
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-between;
 }
